# darling-installer

./: CMakeLists.txt  README
src/: be.h  main-installer.cpp  main-lsbom.cpp  main-pkgutil.cpp  main-test.cpp  main-uninstaller.cpp  main.cpp
src/archive/: ArchivedFileReader.cpp  ArchivedFileReader.h  CPIOArchive.cpp  CPIOArchive.h  FileReader.cpp  GzipReader.cpp  GzipReader.h  InflateReader.cpp  InflateReader.h  PbzxReader.cpp  PbzxReader.h  RandomAccessDirectory.h  SequentialAccessDirectory.h  XARArchive.cpp  XARArchive.h  cpio_odc.h  gzip.h  main-test.cpp  xar.h
src/bom/: BOMArray.h  BOMBTree.cpp  BOMBTree.h  BOMBTreeNode.h  BOMFilesBTree.cpp  BOMFilesBTree.h  BOMPathElement.h  BOMStore.cpp  BOMStore.h  BOMTree.cpp  BOMTree.h  bom.h
src/pkg/: DistributionXml.cpp  DistributionXml.h  Installer.cpp  Installer.h  PackageInfoXml.cpp  PackageInfoXml.h  ReceiptsDb.cpp  ReceiptsDb.h  Uninstaller.cpp  Uninstaller.h  installer.cpp  installer.h
